--- a/themes/greatermedia/assets/css/sass/layout/_menus.scss
+++ b/themes/greatermedia/assets/css/sass/layout/_menus.scss
@@ -107,7 +107,7 @@
 	.site-wrap,
 	.page-wrap {
 		height: 100%;
-		overflow: hidden;
+		//overflow: hidden;
 		position: fixed;
 	}
 }
